# CppStarter

./: CMakeLists.txt  CMakePresets.json  README.md
tests/: CMakeLists.txt
